--- a/پروژه ارسال ایمیل/TAMRIN/appsettings.json
+++ b/پروژه ارسال ایمیل/TAMRIN/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "SqlServer": "Server=87.107.104.208;Database=Memory_DB;User Id=sa;Password=Twenty-Main-pass;TrustServerCertificate=True;"
+    "SqlServer": "********"
   },
   "EmailSettings": {
     "SmtpServer": "smtp.gmail.com",
